<resources>
    <string name="app_name">CreamSoda</string>

    <string name="unknown_error_occurred">Error occurred</string>
    <string name="currency_label">р</string>
    <string name="weight_label">гр</string>
    <string name="volume_label">ml</string>

    <!-- Bottom navigation-->
    <string name="menu_bottom_navigation">Food</string>
    <string name="drinks_bottom_navigation">Drinks</string>
    <string name="hookahs_bottom_navigation">Hookah</string>

    <string name="food_toolbar_title">Food</string>
    <string name="drinks_toolbar_title">Drinks</string>
    <string name="hookah_toolbar_title">Hookah</string>

    <!-- New category activity -->
    <string name="save_menu_item">Save</string>
    <string name="toolbar_title_new_category">New category</string>
    <string name="category_name_hint">Name</string>
    <string name="category_description_hint">Description</string>

    <string name="error_uploading_image">Error uploading image</string>
    <string name="error_image_not_uploaded">Image not uploaded</string>
    <string name="error_saving_category">Error saving category</string>

    <string name="error_empty_field">Field cannot be empty</string>
    <string name="error_incorrect_format">Incorrect format</string>
    <string name="error_cannot_be_zero">Cannot be zero</string>

    <!-- Edit category activity -->
    <string name="delete_menu_item">Delete</string>
    <string name="edit_category_toolbar_title">Edit category</string>

    <!-- New menu item activity -->
    <string name="toolbar_title_new_menu_item">New menu item</string>
    <string name="ingredients_hint">Ingredients</string>
    <string name="tags_hint">Tags</string>
    <string name="price_hint">Price</string>
    <string name="weight_hint">Weight</string>
    <string name="volume_hint">Volume</string>

    <string name="toolbar_title_edit_menu_item">Edit menu item</string>
    <string name="weight_input_helper">In grams</string>
    <string name="volume_input_helper">In milliliters</string>
    <string name="rubles_helper">In rubles</string>

</resources>
















